2005-04-04  Don Allingham  <don@gramps-project.org>
	* src/MedaiView.py: pass handle instead of GRAMPS ID during drag-n-drop
	* src/GrampsBSDDB.py: remove transaction.batch in favor of signal suppression
	* src/GrampsDbBase.py: remove transaction.batch in favor of signal suppression
	* src/GrampsInMemDB.py: remove transaction.batch in favor of signal suppression
	* src/ReadGedcom.py: fix relation typo, enable/disable signals around import 
	* src/ReadXML.py: enable/disable signals around import 
	* src/gramps_main.py: disable signals before undo and exit

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: Don't check callbacks if the dict is empty.
	
2005-04-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbBase.py: add "request_rebuild" to encapsulate rebuild
	requests in the database instance
	* src/ReadXML.py: use request_rebuild instead of directly emitting s
	ignals
	* src/ReadGedCom.py: use request_rebuild instead of directly emitting 
	signals

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: Added code to disable/enable signals on
	a per instance or all instance bassis. Improved test code and 
	changed type checking to use isinstance instead of type(). 
	
2005-04-04  Alex Roitman  <shura@gramps-project.org>
	* src/ImageSelect.py (on_savephoto_clicked): Pass transaction to
	savephoto; (savephoto): take transaction argument);
	(on_photolist_drag_data_received): Pass transaction.

2005-04-03  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: commit family properly
	* src/PedView.py: change_active_person typo
	* src/PeopleView.py: don't change active person with updated
	* src/SelectChild.py: Fix callbacks
	* src/gramps_main.py: load active family on change
	* src/ArgHandler.py: Make sure all databases are closed before
	creating a new one.
	* src/DisplayModels.py: Calculate new nodes properly after a 