@@ -1,5 +1,8 @@
 2005-04-04  Don Allingham  <don@gramps-project.org>
-	* src/MedaiView.py: pass handle instead of GRAMPS ID during drag-n-drop
+	* src/ChooseParents.py: fix father/mother relationship
+	* src/FamilyView.py: fix update of child pointers after add
+	* src/PeopleView.py: unselect previous entry on new goto_active_person
+	* src/MediaView.py: pass handle instead of GRAMPS ID during drag-n-drop
 	* src/GrampsBSDDB.py: remove transaction.batch in favor of signal suppression
 	* src/GrampsDbBase.py: remove transaction.batch in favor of signal suppression
 	* src/GrampsInMemDB.py: remove transaction.batch in favor of signal suppression
